chore: 移除lint:fix命令以及新增--report参数

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "build:test": "npm run clean && cross-env BUILD_ENV=test webpack --display-optimization-bailout --config ./build/webpack.config.dist.js",
     "build:pre": "npm run clean && cross-env BUILD_ENV=pre-production webpack --display-optimization-bailout --config ./build/webpack.config.dist.js",
     "build:prod": "npm run clean && cross-env BUILD_ENV=production webpack --display-optimization-bailout --config ./build/webpack.config.dist.js",
-    "lint": "eslint --ext .js,.vue src build",
-    "lint:fix": "eslint --fix --ext .js,.vue src build"
+    "lint": "eslint --ext .js,.vue src build"
   },
   "repository": {
     "type": "git",
