--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "vue-router": "^3.0.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.6",
+    "vuex": "^3.1.0",
     "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^3.0.4",
     "webpack-cli": "^3.2.3",
