--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "inline-source-webpack-plugin": "^1.0.1",
+    "js-cookie": "^2.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
