--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:test": "npm run clean && cross-env BUILD_ENV=test webpack --config ./build/webpack.config.dist.js",
     "build:pre": "npm run clean && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
     "build:prod": "npm run clean && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
-    "lint": "eslint --ext .js,.vue src build"
+    "lint": "eslint --ext .js,.vue src build",
+    "stylelint": "stylelint 'src/**/*.{vue,htm,html,css,sss,less,scss,sass}'"
   },
   "repository": {
     "type": "git",
@@ -60,11 +61,15 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
+    "sass-loader": "^7.1.0",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-scss": "^3.5.4",
+    "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "vant": "^1.6.5",
     "vconsole": "^3.3.0",
