--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "eslint-plugin-vue": "^5.2.2",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
     "inline-source-webpack-plugin": "^1.2.0",
     "js-cookie": "^2.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "lint-staged": "^8.1.5",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -87,5 +89,20 @@
   "browserslist": [
     "Android >= 4.0",
     "iOS >= 7"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "precommit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,vue}": [
+      "npm run lint",
+      "git add"
+    ],
+    "*.{vue,htm,html,css,sss,less,scss,sass}": [
+      "npm run stylelint",
+      "git add"
+    ]
+  }
 }
