--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
+    "precommit": "lint-staged",
+    "postcommit": "git update-index --again",
     "clean": "node ./build/clean.js",
     "dev": "cross-env BUILD_ENV=development webpack-dev-server --progress --config ./build/webpack.config.dev.js",
     "build:dev": "npm run clean && cross-env BUILD_ENV=development webpack --config ./build/webpack.config.dist.js",
