--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "scripts": {
     "precommit": "lint-staged",
     "postcommit": "git update-index --again",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "build:types": "tsc --emitDeclarationOnly",
     "clean": "node ./build/clean.js",
     "dev": "cross-env BUILD_ENV=development webpack-dev-server --progress --config ./build/webpack.config.dev.js",
-    "build:dev": "npm run clean && cross-env BUILD_ENV=development webpack --config ./build/webpack.config.dist.js",
-    "build:test": "npm run clean && cross-env BUILD_ENV=test webpack --config ./build/webpack.config.dist.js",
-    "build:pre": "npm run clean && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
-    "build:prod": "npm run clean && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
+    "build:dev": "npm run clean && npm run build:types && cross-env BUILD_ENV=development webpack --config ./build/webpack.config.dist.js",
+    "build:test": "npm run clean && npm run build:types && cross-env BUILD_ENV=test webpack --config ./build/webpack.config.dist.js",
+    "build:pre": "npm run clean && npm run build:types && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
+    "build:prod": "npm run clean && npm run build:types && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
     "lint": "eslint --ext .js,.vue src build",
     "stylelint": "stylelint 'src/**/*.{vue,htm,html,css,sss,less,scss,sass}'"
   },
@@ -31,12 +34,18 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
+    "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.3.1",
     "@babel/runtime-corejs2": "^7.3.1",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "autoprefixer": "^9.4.8",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
@@ -74,11 +83,13 @@
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-scss": "^3.5.4",
     "stylelint-webpack-plugin": "^0.10.5",
+    "typescript": "^3.3.3333",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "vant": "^1.6.5",
     "vconsole": "^3.3.0",
     "vue": "^2.6.7",
     "vue-loader": "^15.6.4",
+    "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.7",
