--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "postcommit": "git update-index --again",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "build:types": "tsc --emitDeclarationOnly",
     "clean": "node ./build/clean.js",
     "dev": "cross-env BUILD_ENV=development webpack-dev-server --progress --config ./build/webpack.config.dev.js",
-    "build:dev": "npm run clean && npm run build:types && cross-env BUILD_ENV=development webpack --config ./build/webpack.config.dist.js",
-    "build:test": "npm run clean && npm run build:types && cross-env BUILD_ENV=test webpack --config ./build/webpack.config.dist.js",
-    "build:pre": "npm run clean && npm run build:types && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
-    "build:prod": "npm run clean && npm run build:types && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
+    "build:dev": "npm run clean && cross-env BUILD_ENV=development webpack --config ./build/webpack.config.dist.js",
+    "build:test": "npm run clean && cross-env BUILD_ENV=test webpack --config ./build/webpack.config.dist.js",
+    "build:pre": "npm run clean && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
+    "build:prod": "npm run clean && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
     "lint": "eslint --ext .js,.vue,.ts src",
     "stylelint": "stylelint 'src/**/*.{vue,htm,html,css,sss,less,scss,sass}'"
   },
@@ -33,32 +32,33 @@
   "homepage": "https://github.com/KyLeoHC/vue-startup#readme",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/polyfill": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.3.1",
-    "@babel/runtime-corejs2": "^7.3.1",
-    "@typescript-eslint/eslint-plugin": "^1.4.2",
-    "@typescript-eslint/parser": "^1.4.2",
-    "autoprefixer": "^9.4.8",
+    "@babel/runtime": "^7.4.2",
+    "@babel/runtime-corejs2": "^7.4.2",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@typescript-eslint/parser": "^1.5.0",
+    "autoprefixer": "^9.5.0",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "commander": "^2.19.0",
-    "copy-webpack-plugin": "^5.0.0",
+    "copy-webpack-plugin": "^5.0.2",
+    "core-js": "^3.0.0",
     "cross-env": "^5.2.0",
     "css": "^2.2.3",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.14.1",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.15.3",
     "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-formatter-friendly": "^6.0.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
@@ -83,20 +83,20 @@
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-scss": "^3.5.4",
     "stylelint-webpack-plugin": "^0.10.5",
-    "typescript": "^3.3.3333",
+    "typescript": "^3.3.4000",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "vant": "^1.6.5",
+    "vant": "^1.6.11",
     "vconsole": "^3.3.0",
-    "vue": "^2.6.7",
+    "vue": "^2.6.10",
     "vue-loader": "^15.6.4",
-    "vue-property-decorator": "^8.0.0",
+    "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.7",
+    "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.0",
     "webpack": "^4.29.5",
-    "webpack-bundle-analyzer": "^3.0.4",
-    "webpack-cli": "^3.2.3",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.0"
   },
   "browserslist": [
