--- a/package.json
+++ b/package.json
@@ -30,26 +30,27 @@
   "homepage": "https://github.com/KyLeoHC/vue-startup#readme",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
+    "@babel/core": "^7.4.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/runtime": "^7.3.1",
-    "@babel/runtime-corejs2": "^7.3.1",
-    "autoprefixer": "^9.4.8",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/polyfill": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/runtime": "^7.4.2",
+    "@babel/runtime-corejs2": "^7.4.2",
+    "autoprefixer": "^9.5.0",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "commander": "^2.19.0",
-    "copy-webpack-plugin": "^5.0.0",
+    "copy-webpack-plugin": "^5.0.2",
+    "core-js": "^3.0.0",
     "cross-env": "^5.2.0",
     "css": "^2.2.3",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.14.1",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.15.3",
     "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-formatter-friendly": "^6.0.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
@@ -75,17 +76,17 @@
     "stylelint-scss": "^3.5.4",
     "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "vant": "^1.6.5",
+    "vant": "^1.6.11",
     "vconsole": "^3.3.0",
-    "vue": "^2.6.7",
+    "vue": "^2.6.10",
     "vue-loader": "^15.6.4",
     "vue-router": "^3.0.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.7",
+    "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.0",
     "webpack": "^4.29.5",
-    "webpack-bundle-analyzer": "^3.0.4",
-    "webpack-cli": "^3.2.3",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.0"
   },
   "browserslist": [
@@ -98,11 +99,11 @@
     }
   },
   "lint-staged": {
-    "*.{js,vue}": [
+    "src/**/*.{js,vue}": [
       "npm run lint",
       "git add"
     ],
-    "*.{vue,htm,html,css,sss,less,scss,sass}": [
+    "src/**/*.{vue,htm,html,css,sss,less,scss,sass}": [
       "npm run stylelint",
       "git add"
     ]
