chore: 构建build命令加入ts类型检查命令

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "type-check:watch": "npm run type-check -- --watch",
     "clean": "node ./build/clean.js",
     "dev": "cross-env BUILD_ENV=development webpack-dev-server --progress --config ./build/webpack.config.dev.js",
-    "build:dev": "npm run clean && cross-env BUILD_ENV=development webpack --config ./build/webpack.config.dist.js",
-    "build:test": "npm run clean && cross-env BUILD_ENV=test webpack --config ./build/webpack.config.dist.js",
-    "build:pre": "npm run clean && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
-    "build:prod": "npm run clean && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
+    "build:dev": "npm run clean && npm run type-check && cross-env BUILD_ENV=development webpack --config ./build/webpack.config.dist.js",
+    "build:test": "npm run clean && npm run type-check && cross-env BUILD_ENV=test webpack --config ./build/webpack.config.dist.js",
+    "build:pre": "npm run clean && npm run type-check && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
+    "build:prod": "npm run clean && npm run type-check && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
     "lint": "eslint --ext .js,.vue,.ts src",
     "stylelint": "stylelint 'src/**/*.{vue,htm,html,css,sss,less,scss,sass}'"
   },
