--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.0",
+    "vuex-class": "^0.3.2",
     "webpack": "^4.29.5",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.0",
