chore(tsconfig.json): edit 'include' option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,7 @@
     }
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
