--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "js-cookie": "^2.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "less-vars-to-js": "^1.3.0",
     "lint-staged": "^8.1.5",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
