--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "sass-loader": "^7.1.0",
     "stylelint": "^10.0.0",
     "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-config-standard": "^18.3.0",
     "stylelint-scss": "^3.5.4",
     "stylelint-webpack-plugin": "^0.10.5",
     "typescript": "^3.4.3",
