--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "build:test": "npm run clean && npm run type-check && cross-env BUILD_ENV=test webpack --config ./build/webpack.config.dist.js",
     "build:pre": "npm run clean && npm run type-check && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
     "build:prod": "npm run clean && npm run type-check && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
-    "lint": "eslint --ext .js,.vue,.ts src",
-    "stylelint": "stylelint 'src/**/*.{vue,htm,html,css,sss,less,scss,sass}'"
+    "lint": "eslint --ext .js,.vue,.ts src tests",
+    "stylelint": "stylelint 'src/**/*.{vue,htm,html,css,sss,less,scss,sass}'",
+    "test:unit": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
@@ -26,10 +27,13 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.4.3",
+    "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "autoprefixer": "^9.5.1",
     "axios": "^0.18.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "copy-webpack-plugin": "^5.0.2",
@@ -50,6 +54,9 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
     "inline-source-webpack-plugin": "^1.2.0",
+    "jest": "^24.7.1",
+    "jest-serializer-vue": "^2.0.2",
+    "jest-watch-typeahead": "^0.3.0",
     "js-cookie": "^2.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
@@ -71,6 +78,7 @@
     "vant": "^1.6.14",
     "vconsole": "^3.3.0",
     "vue": "^2.6.10",
+    "vue-jest": "^3.0.4",
     "vue-loader": "^15.6.4",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.5",
