--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "vue-startup",
   "version": "0.0.1",
   "scripts": {
-    "precommit": "lint-staged",
-    "postcommit": "git update-index --again",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "clean": "node ./build/clean.js",
@@ -27,32 +25,32 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.4.5",
-    "@types/jest": "^24.0.13",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@types/jest": "^24.0.15",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
     "@vue/test-utils": "^1.0.0-beta.29",
-    "autoprefixer": "^9.5.1",
-    "axios": "^0.18.0",
+    "autoprefixer": "^9.6.0",
+    "axios": "^0.19.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-import": "^1.11.2",
+    "babel-plugin-import": "^1.12.0",
     "copy-webpack-plugin": "^5.0.3",
-    "core-js": "^3.1.3",
+    "core-js": "^3.1.4",
     "cross-env": "^5.2.0",
     "css": "^2.2.3",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
+    "css-loader": "^3.0.0",
+    "eslint": "^6.0.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-formatter-friendly": "^6.0.0",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
+    "eslint-plugin-vue": "^5.2.3",
     "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^2.3.0",
+    "husky": "^3.0.0",
     "inline-source-webpack-plugin": "^1.2.0",
     "jest": "^24.8.0",
     "jest-serializer-vue": "^2.0.2",
@@ -61,35 +59,35 @@
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "less-vars-to-js": "^1.3.0",
-    "lint-staged": "^8.1.7",
+    "lint-staged": "^9.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
     "sass-loader": "^7.1.0",
-    "stylelint": "^10.0.1",
+    "stylelint": "^10.1.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-config-standard": "^18.3.0",
-    "stylelint-scss": "^3.6.1",
+    "stylelint-scss": "^3.8.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "typescript": "^3.4.5",
+    "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "vant": "^1.6.20",
-    "vconsole": "^3.3.0",
+    "vant": "^2.0.4",
+    "vconsole": "^3.3.1",
     "vue": "^2.6.10",
     "vue-jest": "^3.0.4",
     "vue-loader": "^15.6.4",
-    "vue-property-decorator": "^8.1.1",
+    "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.6",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
     "vuex-class": "^0.3.2",
-    "webpack": "^4.32.2",
+    "webpack": "^4.35.2",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "browserslist": [
     "Android >= 4.0",
@@ -97,11 +95,11 @@
   ],
   "husky": {
     "hooks": {
-      "precommit": "lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "src/**/*.{js,vue}": [
+    "src/**/*.{js,ts,vue}": [
       "npm run lint",
       "git add"
     ],
