--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "stylelint-config-standard": "^18.3.0",
     "stylelint-scss": "^3.9.2",
     "stylelint-webpack-plugin": "^0.10.5",
+    "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.3",
-    "uglifyjs-webpack-plugin": "^2.1.3",
     "vant": "^2.0.9",
     "vconsole": "^3.3.2",
     "vue": "^2.6.10",
