--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "vue-startup",
   "version": "0.0.1",
   "scripts": {
-    "precommit": "lint-staged",
-    "postcommit": "git update-index --again",
     "clean": "node ./build/clean.js",
     "dev": "cross-env BUILD_ENV=development webpack-dev-server --progress --config ./build/webpack.config.dev.js",
     "build:dev": "npm run clean && cross-env BUILD_ENV=development webpack --config ./build/webpack.config.dist.js",
@@ -14,65 +12,65 @@
     "stylelint": "stylelint 'src/**/*.{vue,htm,html,css,sss,less,scss,sass}'"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/runtime": "^7.4.4",
-    "autoprefixer": "^9.5.1",
-    "axios": "^0.18.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-import": "^1.11.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "core-js": "^3.0.1",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "autoprefixer": "^9.6.1",
+    "axios": "^0.19.0",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.12.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "core-js": "^3.1.4",
     "cross-env": "^5.2.0",
-    "css": "^2.2.3",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-formatter-friendly": "^6.0.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
+    "css": "^2.2.4",
+    "css-loader": "^3.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-formatter-friendly": "^7.0.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "glob": "^7.1.2",
+    "eslint-plugin-vue": "^5.2.3",
+    "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^2.1.0",
-    "inline-source-webpack-plugin": "^1.2.0",
+    "husky": "^3.0.1",
+    "inline-source-webpack-plugin": "^1.3.0",
     "js-cookie": "^2.2.0",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
+    "less-loader": "^5.0.0",
     "less-vars-to-js": "^1.3.0",
-    "lint-staged": "^8.1.5",
-    "mini-css-extract-plugin": "^0.6.0",
+    "lint-staged": "^9.2.1",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
     "sass-loader": "^7.1.0",
-    "stylelint": "^10.0.1",
+    "stylelint": "^10.1.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-config-standard": "^18.3.0",
-    "stylelint-scss": "^3.6.0",
+    "stylelint-scss": "^3.9.2",
     "stylelint-webpack-plugin": "^0.10.5",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "vant": "^1.6.16",
-    "vconsole": "^3.3.0",
+    "terser-webpack-plugin": "^1.3.0",
+    "vant": "^2.0.9",
+    "vconsole": "^3.3.2",
     "vue": "^2.6.10",
-    "vue-loader": "^15.6.4",
-    "vue-router": "^3.0.6",
+    "vue-loader": "^15.7.1",
+    "vue-router": "^3.0.7",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "vuex": "^3.1.0",
-    "webpack": "^4.30.0",
+    "vuex": "^3.1.1",
+    "webpack": "^4.38.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "browserslist": [
     "Android >= 4.0",
@@ -80,7 +78,7 @@
   ],
   "husky": {
     "hooks": {
-      "precommit": "lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
