--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:test": "npm run clean && cross-env BUILD_ENV=test webpack --config ./build/webpack.config.dist.js",
     "build:pre": "npm run clean && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
     "build:prod": "npm run clean && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
-    "lint": "eslint --ext .js,.vue src build",
+    "lint": "eslint --ext .js,.vue src",
     "stylelint": "stylelint 'src/**/*.{vue,htm,html,css,sss,less,scss,sass}'"
   },
   "devDependencies": {
