--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:pre": "npm run clean && cross-env BUILD_ENV=pre-production webpack --config ./build/webpack.config.dist.js",
     "build:prod": "npm run clean && cross-env BUILD_ENV=production webpack --config ./build/webpack.config.dist.js",
     "lint": "eslint --ext .js,.vue src",
-    "stylelint": "stylelint 'src/**/*.{vue,htm,html,css,sss,less,scss,sass}'"
+    "stylelint": "stylelint src/**/*.{vue,htm,html,css,sss,less,scss,sass}"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
