--- a/package.json
+++ b/package.json
@@ -61,10 +61,10 @@
     "less-vars-to-js": "^1.3.0",
     "lint-staged": "^9.4.2",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
+    "sass": "^1.23.3",
     "sass-loader": "^8.0.0",
     "stylelint": "^11.1.1",
     "stylelint-config-recommended-scss": "^4.0.0",
