--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-env": "^6.0.3",
     "css": "^2.2.4",
     "css-loader": "^3.2.0",
+    "del": "^5.1.0",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-formatter-friendly": "^7.0.0",
