--- a/package.json
+++ b/package.json
@@ -12,64 +12,65 @@
     "stylelint": "stylelint src/**/*.{vue,htm,html,css,sss,less,scss,sass}"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "autoprefixer": "^9.6.1",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/runtime": "^7.7.2",
+    "autoprefixer": "^9.7.1",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.2",
-    "copy-webpack-plugin": "^5.0.4",
-    "core-js": "^3.2.1",
-    "cross-env": "^6.0.0",
+    "copy-webpack-plugin": "^5.0.5",
+    "core-js": "^3.4.1",
+    "cross-env": "^6.0.3",
     "css": "^2.2.4",
     "css-loader": "^3.2.0",
-    "eslint": "^6.4.0",
+    "del": "^5.1.0",
+    "eslint": "^6.6.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-formatter-friendly": "^7.0.0",
-    "eslint-loader": "^3.0.1",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "glob": "^7.1.4",
+    "eslint-plugin-vue": "^6.0.1",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.5",
+    "husky": "^3.0.9",
     "inline-source-webpack-plugin": "^1.4.1",
     "js-cookie": "^2.2.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "less-vars-to-js": "^1.3.0",
-    "lint-staged": "^9.4.0",
+    "lint-staged": "^9.4.2",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
+    "sass": "^1.23.3",
     "sass-loader": "^8.0.0",
-    "stylelint": "^11.0.0",
+    "stylelint": "^11.1.1",
     "stylelint-config-recommended-scss": "^4.0.0",
     "stylelint-config-standard": "^19.0.0",
-    "stylelint-scss": "^3.11.1",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "vant": "^2.1.3",
+    "stylelint-scss": "^3.12.1",
+    "stylelint-webpack-plugin": "^1.0.3",
+    "vant": "^2.2.12",
     "vconsole": "^3.3.4",
     "vue": "^2.6.10",
-    "vue-loader": "^15.7.1",
+    "vue-loader": "^15.7.2",
     "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "vuex": "^3.1.1",
-    "webpack": "^4.41.0",
-    "webpack-bundle-analyzer": "^3.5.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "vuex": "^3.1.2",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "browserslist": [
     "Android >= 4.0",
