chore: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-formatter-friendly": "^7.0.0",
-    "eslint-loader": "^3.0.2",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -65,6 +65,7 @@
     "lint-staged": "^9.5.0",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^7.0.23",
     "postcss-loader": "^3.0.0",
     "postcss-url": "^8.0.0",
     "sass": "^1.23.7",
@@ -73,9 +74,9 @@
     "stylelint-config-recommended-scss": "^4.1.0",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-scss": "^3.13.0",
-    "stylelint-webpack-plugin": "^1.1.1",
-    "typescript": "^3.7.2",
-    "vant": "^2.2.15",
+    "stylelint-webpack-plugin": "^1.1.2",
+    "typescript": "^3.7.3",
+    "vant": "^2.2.16",
     "vconsole": "^3.3.4",
     "vue": "^2.6.10",
     "vue-jest": "^3.0.5",
